done some dependency updates

--- a/app/components/climate-page/climate-page.html
+++ b/app/components/climate-page/climate-page.html
@@ -127,7 +127,7 @@
           <div
             class="temp-container d-flex align-items-center justify-content-center"
           >
-            <h1>23ºC</h1>
+            <h1 data-ch5-textcontent="">23ºC</h1>
           </div>
         </div>
         <div class="col-12 col-sm p-0">
@@ -139,7 +139,7 @@
               shape="circle"
               stretch="both"
               iconclass="fas fa-plus"
-              sendeventonclick="btn_clicked"
+              sendeventonclick="Rooms.Climate.IncrementTemp"
             >
             </ch5-button>
 
