Added Intercom page; on Climate page conected AC and room temp with emulator; changed size of room-list dropdown bar

--- a/app/assets/scss/_components.scss
+++ b/app/assets/scss/_components.scss
@@ -208,45 +208,58 @@
 .room-list-templ {
   .dropdown-menu {
     min-width: 100vw;
+    height: 91vh;
+
     @include media-breakpoint-up(sm) {
-      min-width: 65vw;
+      min-width: 60vw;
+      height: 89vh;
     }
     @include media-breakpoint-up(md) {
-      width: 60vw;
+      min-width: 60vw;
     }
-    // @include media-breakpoint-up(lg) {
-    //   width: 60vw;
-    // }
-    // @include media-breakpoint-up(xl) {
-    //   width: 65vw;
-    // }
+    @include media-breakpoint-up(lg) {
+      min-width: 50vw;
+      height: 91vh;
+    }
+    @include media-breakpoint-up(xl) {
+      min-width: 48vw;
+
+      height: 93vh;
+    }
   }
   .ch5-button {
     border: 0;
   }
   .row {
     &.list-container {
-      height: 91vh;
-      @include media-breakpoint-up(sm) {
-        height: 85vh;
-      }
-
-      @include media-breakpoint-up(lg) {
-        height: 87vh;
-      }
-      @include media-breakpoint-up(xl) {
-        height: 91vh;
-      }
+      width: 100%;
+      height: 100%;
     }
   }
+  // .row {
+  //   &.list-container {
+  //     // height: 91vh;
+  //     @include media-breakpoint-up(sm) {
+  //       height: 85vh;
+  //     }
+
+  //     @include media-breakpoint-up(lg) {
+  //       height: 87vh;
+  //     }
+  //     @include media-breakpoint-up(xl) {
+  //       height: 91vh;
+  //     }
+  //   }
+  // }
 
   .floors-container {
     padding: 12rem 0 0 0;
     margin-left: 1.5rem;
     @include media-breakpoint-up(sm) {
-      padding: 5rem 0 0 0;
+      padding: 3rem 0 0 0;
     }
     @include media-breakpoint-up(md) {
+      margin-left: 1rem;
       padding: 10rem 2rem 0;
     }
   }
@@ -1017,6 +1030,7 @@
     grid-template-columns: minmax(auto, 25vmin);
     grid-auto-rows: 7vh;
     grid-gap: 0.8rem;
+
     &.horizontal {
       @include media-breakpoint-only(xs) {
         grid-template-columns: repeat(3, minmax(auto, 25vmin));
@@ -1079,14 +1093,14 @@
       }
     }
     @include media-breakpoint-up(lg) {
-      grid-template-columns: repeat(2, minmax(auto, 15vmin));
+      grid-template-columns: repeat(2, minmax(auto, 13vmin));
       grid-gap: 2rem;
       & span {
         font-size: 1.6rem;
       }
     }
     @include media-breakpoint-up(xl) {
-      grid-template-columns: repeat(2, minmax(auto, 15vmin));
+      grid-template-columns: repeat(2, minmax(auto, 12vmin));
       grid-gap: 2.5rem;
       & span {
         font-size: 2rem;
@@ -1149,6 +1163,20 @@
     height: 11rem;
     width: 11rem;
     margin: 2rem 0 0 3rem;
+    .textinput {
+      display: grid;
+      grid-template-columns: minmax(auto, 17vmin);
+      grid-auto-rows: 6vh;
+      .ch5-textinput {
+        font-size: 2.8rem;
+        opacity: 1;
+        // color: black;
+        .ch5-textinput__assets {
+          border: none;
+          box-shadow: none;
+        }
+      }
+    }
     @include media-breakpoint-up(sm) {
       margin: 0.5rem 0 0 4rem;
     }
@@ -1291,7 +1319,9 @@
       justify-content: center;
       align-content: space-between;
       align-items: center;
+      align-content: flex-end;
 
+      min-height: 85px;
       .features-btn {
         margin-top: 0.3rem;
       }
@@ -1330,15 +1360,20 @@
       @include media-breakpoint-up(xl) {
         margin-top: 4.5rem;
       }
-      .song-name {
+      .song-name-container {
         margin-left: 1rem;
         display: flex;
-        align-items: center;
+        // align-items: center;
+        .song-name {
+          min-width: 100px;
+          white-space: nowrap;
+        }
         h2 {
           padding-top: 0.8rem;
+          display: inline-block;
         }
         button {
-          margin-left: 15rem;
+          margin-left: 14rem;
         }
         @include media-breakpoint-only(sm) {
           h2 {
@@ -1530,6 +1565,233 @@
     }
     @include media-breakpoint-up(xl) {
       height: 65vh;
+    }
+  }
+}
+
+// intercom page
+
+.intercom-page {
+  .dnd-btn-container {
+    position: absolute;
+    // display: flex;
+    right: 20px;
+    top: 10px;
+
+    @include media-breakpoint-up(xl) {
+      right: 25px;
+    }
+    .dnd-btn {
+      position: relative;
+      display: grid;
+      z-index: 100;
+      grid-template-columns: minmax(auto, 15vmin);
+      grid-auto-rows: 1fr;
+      & span {
+        font-size: 1.3rem;
+      }
+      .ch5-button {
+        border: none;
+      }
+      @include media-breakpoint-up(md) {
+        grid-template-columns: minmax(auto, 14vmin);
+
+        & span {
+          font-size: 1.4rem;
+        }
+      }
+      @include media-breakpoint-up(lg) {
+        grid-template-columns: minmax(auto, 11vmin);
+
+        & span {
+          font-size: 1.6rem;
+        }
+      }
+      @include media-breakpoint-up(xl) {
+        grid-template-columns: minmax(auto, 9vmin);
+
+        & span {
+          font-size: 1.8rem;
+        }
+      }
+    }
+    .dnd-btn::before {
+      content: "";
+      width: 0;
+      padding-bottom: 100%;
+      grid-row: 1 / 1;
+      grid-column: 1 / 1;
+    }
+    .dnd-btn > *:first-child {
+      grid-row: 1 / 1;
+      grid-column: 1 / 1;
+    }
+    .dnd-btn > div {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+    img {
+      // settings for do-not-disturb.png
+
+      height: 140px;
+      width: 85px;
+      right: -15px;
+      top: -10px;
+
+      // settings for dnd-hanger.png
+
+      // right: -20px;
+      // height: 120px;
+      // width: 135px;
+
+      z-index: 99;
+      position: absolute;
+      @include media-breakpoint-up(lg) {
+        height: 170px;
+        width: 100px;
+        right: -16px;
+        top: -6px;
+      }
+      @include media-breakpoint-up(xl) {
+        height: 180px;
+        width: 105px;
+        right: -16px;
+        top: -2px;
+      }
+    }
+  }
+  .main-intercom-container {
+    height: 67vh;
+    width: 93vw;
+    padding-top: 1.8rem;
+    @include media-breakpoint-only(sm) {
+      height: 62vh;
+      width: 95vw;
+      padding-top: 0;
+    }
+    @include media-breakpoint-up(lg) {
+      margin-top: 1rem;
+      height: 57vh;
+      width: 95vw;
+    }
+
+    @include media-breakpoint-up(xl) {
+      margin-top: 1.8rem !important;
+      height: 65vh;
+      padding-top: 1.8rem;
+    }
+  }
+  .control-btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .ch5-button {
+      background: transparent;
+      border: none;
+      box-shadow: none;
+    }
+    .ch5-button--default {
+      &.ch5-button--pressed {
+        background-color: transparent !important;
+        // border: none;
+        // box-shadow: none;
+      }
+    }
+
+    .phone-btn-container {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(auto, 25vmin));
+      grid-auto-rows: 10vh;
+      margin-top: 1rem;
+      @include media-breakpoint-up(sm) {
+        grid-auto-rows: 10vw;
+      }
+      @include media-breakpoint-up(lg) {
+        grid-template-columns: repeat(3, minmax(auto, 20vmin));
+        grid-auto-rows: 17vh;
+      }
+      @include media-breakpoint-up(xl) {
+        margin-top: 0;
+        grid-template-columns: repeat(3, minmax(auto, 20vmin));
+        grid-auto-rows: 17vh;
+      }
+      .phone-btn {
+        .ch5-button {
+          // background: transparent;
+          // border: none;
+          // box-shadow: none;
+          svg {
+            width: 45px;
+            height: 45px;
+            @include media-breakpoint-up(lg) {
+              width: 60px;
+              height: 60px;
+            }
+          }
+        }
+      }
+      .red-phone {
+        padding-top: 1rem;
+        .ch5-button {
+          svg {
+            transform: rotateZ(135deg);
+          }
+        }
+      }
+      .lock-btn {
+        .ch5-button {
+          svg {
+            width: 38px;
+            height: 38px;
+            @include media-breakpoint-up(lg) {
+              width: 48px;
+              height: 48px;
+            }
+          }
+        }
+        .ch5-button--pressed {
+          svg {
+            width: 42px;
+            height: 42px;
+            @include media-breakpoint-up(lg) {
+              width: 52px;
+              height: 52px;
+            }
+          }
+        }
+      }
+    }
+    .volume-btn-container {
+      display: grid;
+      grid-template-columns: repeat(5, minmax(auto, 15vmin));
+      grid-auto-rows: 5vh;
+      grid-gap: 0.5rem;
+      margin-top: 6rem;
+      @include media-breakpoint-up(lg) {
+        grid-template-columns: repeat(5, minmax(auto, 11vmin));
+        grid-auto-rows: 7vh;
+        margin-top: 9rem;
+      }
+      .ch5-button {
+        font-size: 2rem;
+      }
+      .ch5-button--pressed {
+        font-size: 2.3rem;
+      }
+    }
+  }
+
+  .video-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 95%;
+      height: 90%;
     }
   }
 }
