--- a/app/assets/scss/themes/_dark-theme.scss
+++ b/app/assets/scss/themes/_dark-theme.scss
@@ -451,8 +451,12 @@ $gradient-btn-pressed-dark: linear-gradient(-45deg, #8492a5, #2a2e33);
   // climate page
   .climate-page {
     .room-temp {
-      h5 {
-        color: $music-icon-bg-dark;
+      h4 {
+        color: rgba(139, 139, 139, 0.938);
+      }
+      h2,
+      h3 {
+        color: rgb(139, 139, 139);
       }
     }
     .mode-buttons-container,
@@ -480,7 +484,7 @@ $gradient-btn-pressed-dark: linear-gradient(-45deg, #8492a5, #2a2e33);
         // opacity: 0.9;
         color: rgba(0, 0, 0, 0.842);
       }
-      .ch5-button--pressed {
+      .ch5-button--selected {
         // background: $gradient-btn-pressed-dark;
         background: linear-gradient(-45deg, #454c57, #3d4249);
         opacity: 1;
@@ -547,7 +551,7 @@ $gradient-btn-pressed-dark: linear-gradient(-45deg, #8492a5, #2a2e33);
         color: $music-icon-bg-dark;
       }
     }
-    .song-name {
+    .song-name-container {
       button {
         background-color: transparent;
         color: $music-icon-bg-dark;
@@ -627,6 +631,63 @@ $gradient-btn-pressed-dark: linear-gradient(-45deg, #8492a5, #2a2e33);
         h3,
         h4 {
           color: rgb(148, 148, 148);
+        }
+      }
+    }
+  }
+
+  // intercom page
+  .intercom-page {
+    .main-intercom-container {
+      background-color: $ch5-dark-navbar-bg;
+      box-shadow: 0px 3px 9px 2px rgb(124, 124, 124);
+    }
+    .dnd-btn-container {
+      .dnd-btn {
+        .ch5-button {
+          background: $gradient-btn-dark;
+          box-shadow: 0 0 5px rgb(102, 102, 102);
+        }
+        .ch5-button--default {
+          box-shadow: none;
+        }
+        .ch5-button--pressed {
+          background: $gradient-btn-pressed-dark;
+          box-shadow: 0px 0px 15px rgb(156, 156, 156);
+        }
+      }
+      img {
+        filter: invert(55%) opacity(1);
+        -webkit-filter: invert(55%) opacity(1);
+      }
+    }
+    .phone-btn-container {
+      .green-phone {
+        .ch5-button {
+          svg {
+            fill: #006f65;
+          }
+        }
+      }
+      .red-phone {
+        .ch5-button {
+          svg {
+            fill: #850000;
+          }
+        }
+      }
+      .lock-btn {
+        .ch5-button {
+          svg {
+            fill: #b1b1b1;
+          }
+        }
+      }
+    }
+    .volume-btn-container {
+      .ch5-button {
+        i {
+          color: $music-icon-bg-dark;
         }
       }
     }
