--- a/app/components/room-list-templ/room-list-templ.html
+++ b/app/components/room-list-templ/room-list-templ.html
@@ -54,7 +54,7 @@
               orientation="vertical"
               indexId="idx"
               receivestatesize="Rooms.NumberOfRooms"
-              scrollbar="true"
+              scrollbar="false"
             >
               <template>
                 <div class="rooms-btn">
