--- a/app/components/video/video.html
+++ b/app/components/video/video.html
@@ -2,16 +2,33 @@
   <div class="row no-gutters">
     <div class="col">
       <header>
-        <h1 class="text-uppercase" data-ch5-i18n="-+video.title+-"></h1>
-        <p class="lead desc-title" data-ch5-i18n="-+video.description+-"></p>
+        <div class="navbar-text">
+          <div class="room-info mb-1 pt-2 text-uppercase text-white">
+            <span class="d-sm-block">CCTV</span>
+            <h2 class="mb-0" data-ch5-textcontent="Rooms.SelectedRoomName">
+              Room Name
+            </h2>
+          </div>
+        </div>
         <hr />
-        <button class="navbar-toggler d-sm-none" type="button" onclick="videoModule.videoNavbarOpen()">
+        <button
+          class="navbar-toggler d-sm-none"
+          type="button"
+          onclick="videoModule.videoNavbarOpen()"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
       </header>
       <div class="video-container">
-        <ch5-video aspectratio="16:9" indexid="idx" zindex="0" stretch="true" size="x-small" controls="true"
-          receivestatevideocount="CameraList.NumberOfCameras" receivestateselect="CameraList.IndexOfSelectedCamera"
+        <ch5-video
+          aspectratio="16:9"
+          indexid="idx"
+          zindex="0"
+          stretch="true"
+          size="x-small"
+          controls="true"
+          receivestatevideocount="CameraList.NumberOfCameras"
+          receivestateselect="CameraList.IndexOfSelectedCamera"
           receivestateurl="CameraList.Cameras[{{idx}}].VideoURLOfCamera"
           receivestatesnapshoturl="CameraList.Cameras[{{idx}}].ImageURLOfCamera"
           receivestatesourcetype="CameraList.Cameras[{{idx}}].SourceTypeOfCamera"
@@ -20,7 +37,8 @@
           receivestatesnapshotuserid="CameraList.Cameras[{{idx}}].UserIdOfImage"
           receivestatesnapshotpassword="CameraList.Cameras[{{idx}}].PasswordOfImage"
           receivestatesnapshotrefreshrate="CameraList.Cameras[{{idx}}].TimePeriodOfImage"
-          sendeventstate="CameraList.StateOfSelectedCamera" sendeventselectionurl="CameraList.VideoURLOfSelectedCamera"
+          sendeventstate="CameraList.StateOfSelectedCamera"
+          sendeventselectionurl="CameraList.VideoURLOfSelectedCamera"
           sendeventerrorcode="CameraList.ErrorCodeOfSelectedCamera"
           sendeventerrormessage="CameraList.ErrorMessageOfSelectedCamera"
           sendeventsnapshoturl="CameraList.ImageURLOfSelectedCamera"
@@ -28,16 +46,33 @@
           sendeventretrycount="CameraList.RetryCountOfSelectedCamera"
           sendeventsnapshotlastupdatetime="CameraList.LastUpdateTimeOfSelectedCameraImage"
           sendeventresolution="CameraList.ResolutionOfSelectedCamera"
-          sendeventsnapshotstatus="CameraList.StatusOfSelectedCameraImage" debug></ch5-video>
+          sendeventsnapshotstatus="CameraList.StatusOfSelectedCameraImage"
+          debug
+        ></ch5-video>
       </div>
     </div>
     <div class="video-navbar" id="videoNavbar">
       <div class="card custom-list-group" id="videoScrollerPanel">
-        <ch5-list class="video-list" itemWidth="auto" itemheight="auto" orientation="vertical" indexId="idx"
-          receiveStateSize="CameraList.NumberOfCameras" scrollbar="false">
+        <ch5-list
+          class="video-list"
+          itemWidth="auto"
+          itemheight="auto"
+          orientation="vertical"
+          indexId="idx"
+          receiveStateSize="CameraList.NumberOfCameras"
+          scrollbar="false"
+        >
           <template>
-            <div id="video-list-item-{{idx}}" class="list-group-item list-group-item-action d-flex">
-              <h5 class="mb-0" data-ch5-textcontent="CameraList.Cameras[{{idx}}].NameOfCamera">Not Populated</h5>
+            <div
+              id="video-list-item-{{idx}}"
+              class="list-group-item list-group-item-action d-flex"
+            >
+              <h5
+                class="mb-0"
+                data-ch5-textcontent="CameraList.Cameras[{{idx}}].NameOfCamera"
+              >
+                Not Populated
+              </h5>
             </div>
           </template>
         </ch5-list>
